@@ -10,7 +10,7 @@
 #     Andreas Kupries during the development of this code.
 #
 #
-# $Id: pool.tcl,v 1.2 2002/08/06 20:40:42 andreas_kupries Exp $
+# $Id: pool.tcl,v 1.3 2003/11/19 06:39:11 andreas_kupries Exp $
 #
 ################################################################################
 
@@ -675,7 +675,9 @@ proc ::struct::pool::request {poolname itemvar args} {
             if { $state($prefer) == -1 } {
                 set index [lsearch $pool(freeitems) $prefer]
                 set item $prefer
-            }
+            } else {
+		return 0
+	    }
         } else  {
             set index 0
             set item [lindex $pool(freeitems) 0]
