@@ -1,3 +1,9 @@
+2003-11-18  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
+
+	* pool.tcl (::struct::pool::request): Changed to return 0 as
+	  documented when trying to get an already allocated item. Fixed
+	  [SF Tcllib Bug 842408]. Used the alternative fix.
+
 2003-10-21  Andreas Kupries  <andreask@activestate.com>
 
 	* struct_tree.man: Added more documentation about the root node of
